# sb

./: .gitignore  .sops.yaml  CLAUDE.md  HANDOFF.md  KSERVE_HANDOFF.md  README.md  ROADMAP.md  TODO.md  agents.md  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml  droid-implement.yml  droid.yml  nexus-agent-worker.yml  nexus-bot.yml  nexus-embeddings-worker.yml  nexus-mc-monitor.yml  nexus.yml  nixos-deploy.yml  template.yml  the-machine.yml
apps/: .gitignore  Dockerfile.nexus  Dockerfile.nexus-agent-worker  Dockerfile.nexus-embeddings-worker  Dockerfile.nexus-mc-monitor  Dockerfile.the-machine  README.md  biome.json  lefthook.yml  package.json  ts.html  tsconfig.json
apps/dashboard/: .cta.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/docs/: flux-domain.md
apps/k8s/: package.json  tsconfig.json
apps/logger/: README.md  index.ts  package.json  tsconfig.json
apps/mc-monitor/: package.json  test.ts
argocd/: README.md
assets/: logo.txt
docs/: QOL-ideas.md  living-agent.md  nixos-spark.md
flux/: .sops.yaml  AGENTS.md  README.md
hermes/: SOUL.md  config.yaml
nexus/: .dockerignore  .env.example  .gitignore  README.md  biome.json  package.json  tsconfig.json  turbo.json
nexus/services/whisper/: Dockerfile  pyproject.toml
nexus/services/whisper/src/wyoming_openvino_whisper/: __main__.py  handler.py
nixos/: README.md  ZFS-NAS-SETUP.md  configuration.nix  hardware-configuration.nix
sb-apps/: .gitignore  README.md  package.json  tsconfig.json
sb-cluster/: AGENTS.md  README.md
sb-system/: flake.nix
(+647 files in other folders)
