[project]
name = "wyoming-openvino-whisper"
version = "0.1.0"
description = "Wyoming protocol server for Whisper speech-to-text using OpenVINO (Intel GPU)"
requires-python = ">=3.11"
dependencies = [
    "wyoming>=1.5.0",
    "openvino-genai>=2024.5.0",
]

[project.scripts]
wyoming-openvino-whisper = "wyoming_openvino_whisper.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wyoming_openvino_whisper"]
